--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,6 +37,7 @@ jobs:
           command: |
             VERSION=$(my-binary --version)
             ghr -t ${GITHUB_TOKEN} -u ${CIRCLE_PROJECT_USERNAME} -r ${CIRCLE_PROJECT_REPONAME} -c ${CIRCLE_SHA1} -delete ${VERSION} .
+            
 workflows:
   version: 2
   build-n-release:
@@ -51,6 +52,4 @@ workflows:
           - fmt
         filters:
           branches:
-            ignore: /.*/
-          tags:
-            only: /^\d+\.\d+\.\d+$/
+            only: master
